<resources>
    <string name="app_name">Vin39</string>
    <string name="menu_my_car">Мои объявления</string>
    <string name="menu_car">Поиск</string>
    <string name="menu_profile">Профиль</string>
    <string name="title_activity_login">Вход</string>
    <string name="title_activity_аctivate">Активация</string>
    <string name="title_activity_registration">Регистрация</string>
    <string name="login">Войти</string>
    <string name="logout">Выйти</string>
    <string name="reg">Регистрация</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="pass1">Еще раз пароль</string>
    <string name="dofile">Загрузка завершена</string>
    <string name="username">Логин</string>
    <string name="email0">Почта</string>
    <string name="num">Договора</string>
    <string name="web_error">Ошибка облака!</string>
    <string name="pin">Pin код</string>
    <string name="net_error">Нет интернета!</string>
    <string name="alert_title_finanse">Свойства</string>
    <string name="button_ok_title">Ок</string>
    <string name="button_activate">Потвердить</string>
    <string name="admin_login">Логин</string>
    <string name="admin_fio">Ф.И.О.</string>
    <string name="car_data0">Год выпуска от:</string>
    <string name="car_data1">Год выпуска до:</string>
    <string name="brand_title">Марка:</string>
    <string name="model_title">Модель:</string>
    <string name="type_title">Тип:</string>
    <string name="equipment_title">Коробка передач:</string>
    <string name="body_title">Тип кузова:</string>
    <string name="state_title">Состояние:</string>
    <string name="generation_title">Поколение:</string>
    <string name="engine_title">Тип двигателя:</string>
    <string name="drive_title">Привод:</string>
    <string name="save_button">Сохранить</string>
    <string name="nap_title">Напровление</string>
    <string name="summa_title">Сумма</string>
    <string name="chek_button">Чек</string>
    <string name="not_all_data">Вы заполнили не все поля!</string>
    <string name="error_password">Пароли не совпадают</string>
    <string name="error_email">Невалидный email</string>
    <string name="error_file">Ошибка файла!</string>
    <string name="pin_cod">Pin код отправлен на email!</string>
    <string name="pin_cod_button">Выслать Pin код еще раз</string>
    <string name="year_of_issue_title">Год выпуска:</string>
    <string name="vin_title">Vin:</string>
    <string name="price_title">Цена:</string>
    <string name="stock_title">Акцион:</string>
    <string name="mileage_title">Пробег:</string>
    <string name="owners_by_TCP_title">Владельцев по ПТС:</string>
    <string name="engine_volume_title">Объем двигателя:</string>
    <string name="color_title">Цвет:</string>
    <string name="city">Город:</string>
    <string name="condition">Состояния:</string>
    <string name="rudder">Руль:</string>
    <string name="data">Дата:</string>
    <string name="phone">Телефон</string>
    <string name="zip">Архивировать</string>
    <string name="dezip">Разархивировать</string>
    <string name="archive">Архив</string>
    <string name="number_of_doors_title">Количество дверей:</string>
    <string name="regin">Регистрация</string>
    <string name="last_name">Имя</string>
    <string name="first_name">Фамилия</string>
    <string name="no_camera">Ваше устройство не поддерживает съемку</string>
    <string name="session_expired">Сессия истекла!</string>
</resources>
