<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_black"
        android:orientation="vertical"
        android:id="@+id/finanse_item">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/brand_title"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/brand"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/model_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/model"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:layout_height="80dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/car_data0"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/car_date0"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:inputType="number"
            android:focusableInTouchMode="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/car_data1"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/car_date1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:inputType="number"
            android:focusableInTouchMode="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/generation_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/generation"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/equipment_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/equipment"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/city"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/rudder"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/rudder"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/condition"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/body_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/engine_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/engine"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/drive_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/drive"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/owners_by_TCP_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/ownerss"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/engine_volume_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/engine_capacity"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/color_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/number_of_doors_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/number_of_doors"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/mileage_title"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimary"
            android:inputType="number"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_car"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</ScrollView>