<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/brand_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/model_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/generation_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/generation"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/equipment_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/equipment"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/city"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/rudder"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/rudder"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/condition"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/body_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/engine_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/engine"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/drive_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/drive"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/year_of_issue_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/year"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/owners_by_TCP_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/ownerss"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/engine_volume_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/engine_capacity"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/color_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/number_of_doors_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/number_of_doors"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/vin_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/vin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimary"
            android:inputType="text"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/price_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimary"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:text="@string/mileage_title"
            android:textColor="#aeb3c0"
            android:textSize="16sp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/mileage"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHighlight="@color/colorPrimary"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColor="@color/colorPrimary"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image1"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image2"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image3"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image4"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image5"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image6"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/image7"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image8"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image9"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image10"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image11"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
            <ImageView
                android:id="@+id/image12"
                android:layout_width="50dp"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/camera_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@color/primary_black"
                android:src="@drawable/ic_camera"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/file_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@color/primary_black"
                android:src="@drawable/ic_skrepka"/>
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:text="@string/save_button"/>

        <ProgressBar
            android:id="@+id/add_cars_progres"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

</ScrollView>

